objects/ProductExtensions__c.object
<CustomObject>
    <description>SFDC1-134 : This Object will be used to Track the Product Extensions between Product and Legal Entities</description>
    <fields>
        <fullName>LegalEntity__c</fullName>
        <description>SFDC1-134 : This field will be used to store the value of Legal Entity</description>
        <label>Legal Entity</label>
        <referenceTo>LegalEntity__c</referenceTo>
        <relationshipLabel>Product Extensions</relationshipLabel>
        <relationshipName>Product_Extensions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PKIDProdExt__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>PdE{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID ProdExt</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-134 : This field will be used to store the Product Value</description>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Extensions</relationshipLabel>
        <relationshipName>Product_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Product Extensions</label>
    <nameField>
        <displayFormat>PE-{000000}</displayFormat>
        <label>Product Extensions Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Extensions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CanNotBeActiveIfLegalEntityInactive</fullName>
        <active>true</active>
        <description>SFDC1 -134 : Product Extension can not be Active if Legal Entity is InActive</description>
        <errorConditionFormula>If(OR( $Setup.SystemMutedValidationRules__c.ProductExtensions__c, $Setup.SystemMutedValidationRules__c.All__c ), False,
Text(Status__c )  = &apos;Active&apos; &amp;&amp;  TEXT(LegalEntity__r.Status__c ) = &apos;Inactive&apos;
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Product Extension can not be Active if Legal Entity is Inactive.</errorMessage>
    </validationRules>
</CustomObject>